# pascal-annotation-v1-extractor

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  gcovr.cfg
.github/workflows/: linux.yml
examples/: prepare_INRIA_person_dataset.sh
src/: adapted.hpp  grammar.hpp  pav1iet.cpp
